feat: Enhance Google anchor integration and improve UI feedback; add schema validation and unit tests

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,6 +21,7 @@
       <option value="google">Google Anchor</option>
     </select>
     <button id="googleSignInBtn" style="display:none;">Sign in with Google</button>
+    <span id="authStatus" style="margin-left:10px; color: #00796b; font-weight: bold;"></span>
     <br><br>
     <button type="submit" id="generateBtn">Generate Codex Entry</button>
   </form>
